# DirectionClassifier

./: Example.py  Example_pytorch.py  README.md  mlflow.db  mlruns.db  pyproject.toml
Test/: test_cuda_available.py
src/: main.py  webcam_capture.py
